Fix critical linter errors - return types and unused imports

--- a/docs/РУКОВОДСТВО_ПОЛЬЗОВАТЕЛЯ.md
+++ b/docs/РУКОВОДСТВО_ПОЛЬЗОВАТЕЛЯ.md
@@ -1,5 +1,5 @@
 # Руководство пользователя CUIS
-## Cosyma Unified Info-System - Панель управления
+## Reki Medical Device Management System - Панель управления
 
 ### Оглавление
 1. [Обзор системы](#обзор-системы)
@@ -17,7 +17,7 @@
 
 ## Обзор системы
 
-CUIS (Cosyma Unified Info-System) — это комплексная система управления для медицинских учреждений, предназначенная для управления медицинскими устройствами, пациентами (клиентами) и формами оценки. Система помогает оптимизировать рабочие процессы, предоставляя централизованную платформу для отслеживания оборудования, управления информацией о пациентах и проведения стандартизированных оценок.
+Reki — это комплексная система управления для медицинских учреждений, предназначенная для управления медицинскими устройствами, пациентами (клиентами) и формами оценки. Система помогает оптимизировать рабочие процессы, предоставляя централизованную платформу для отслеживания оборудования, управления информацией о пациентах и проведения стандартизированных оценок.
 
 ### Основные возможности
 - **Управление устройствами**: Отслеживание медицинских устройств в различных местоположениях и статусах
